--- a/ControleFinanceiroPessoal/ControleFinanceiroPessoal.csproj
+++ b/ControleFinanceiroPessoal/ControleFinanceiroPessoal.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
